--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  
   flutter_markdown: ^0.6.10
   flutter_share: ^2.0.0
   flutter_staggered_animations: ^1.0.0
@@ -54,6 +55,11 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   hive_generator: ^1.1.2
+  flutter_launcher_icons: ^0.9.2
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/QURANICONPRO.jpg"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
