--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  adaptive_theme: ^3.0.0
   analog_clock: ^0.1.0
   animated_text_kit: ^4.2.1
   audio_service: ^0.18.4
@@ -34,7 +35,6 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
-  
   flutter_markdown: ^0.6.10
   flutter_share: ^2.0.0
   flutter_staggered_animations: ^1.0.0
@@ -51,11 +51,11 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.1.10
+  flutter_launcher_icons: ^0.9.2
   flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
   hive_generator: ^1.1.2
-  flutter_launcher_icons: ^0.9.2
 flutter_icons:
   android: "launcher_icon"
   ios: true
