--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,8 +2,9 @@
     package="com.example.quraanproject">
 
    <uses-permission
-     android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+     android:name="android.permission.INTERNET"
      android:maxSdkVersion="18" />
+   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />  
 
    <application
         android:label="Noble Qur'an"
