--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,13 +2,12 @@
     package="com.example.quraanproject">
 
    <uses-permission
-     android:name="android.permission.INTERNET"
-     android:maxSdkVersion="18" />
-   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />  
+     android:name="android.permission.INTERNET" />
 
    <application
         android:label="Noble Qur'an"
         android:name="${applicationName}"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
@@ -36,5 +35,6 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        
     </application>
 </manifest>
